# Lab3-2025TO

./: CMakeLists.txt  README.md
docs/: RESUMEN_PRUEBAS.md
include/: Alumno.h  Observador.h  Persona.h  Profesor.h  SistemaGestion.h  Sujeto.h  Tarea.h
src/: Alumno.cpp  Persona.cpp  Profesor.cpp  SistemaGestion.cpp  Tarea.cpp  main.cpp
tests/: test_alumno.cpp  test_main.cpp  test_observer_pattern.cpp  test_profesor.cpp  test_sistema_gestion.cpp  test_tarea.cpp
